force-app/main/default/objects/Fulfillment__c/Fulfillment__c.object-meta.xml
<CustomObject>
    <label>Fulfillment</label>
    <nameField>
        <label>Fulfillment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fulfillments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>