force-app/main/default/objects/Fulfillment__c/fields/Adventure__c.field-meta.xml
<CustomField>
    <fullName>Adventure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adventure</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Fulfillments</relationshipLabel>
    <relationshipName>Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>