force-app/main/default/objects/Fulfillment__c/fields/Adventure_Package_Cost__c.field-meta.xml
<CustomField>
    <fullName>Adventure_Package_Cost__c</fullName>
    <label>Adventure Package Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>