force-app/main/default/objects/Fulfillment__c/fields/Dietary_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Restrictions__c</fullName>
    <label>Dietary Restrictions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>Diabetic</fullName>
            </value>
            <value>
                <fullName>Gluten Free</fullName>
            </value>
            <value>
                <fullName>No Peanuts</fullName>
            </value>
            <value>
                <fullName>No Shellfish</fullName>
            </value>
            <value>
                <fullName>Allergy (specify in special needs)</fullName>
            </value>
            <value>
                <fullName>Pescatarian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>