force-app/main/default/objects/Fulfillment__c/fields/Expedition_Leader__c.field-meta.xml
<CustomField>
    <fullName>Expedition_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expedition Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Fulfillments (Expedition Leader)</relationshipLabel>
    <relationshipName>Fulfillments1</relationshipName>
    <type>Lookup</type>
</CustomField>