force-app/main/default/objects/Fulfillment__c/fields/Explorer__c.field-meta.xml
<CustomField>
    <fullName>Explorer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Explorer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fulfillments</relationshipLabel>
    <relationshipName>Fulfillments</relationshipName>
    <type>Lookup</type>
</CustomField>