force-app/main/default/objects/Fulfillment__c/fields/Is_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Is_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Exempt</label>
    <type>Checkbox</type>
</CustomField>