force-app/main/default/objects/Fulfillment__c/fields/Preferred_form_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_form_of_Contact__c</fullName>
    <label>Preferred form of Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mobile Call</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>