force-app/main/default/objects/Fulfillment__c/fields/Special_Needs__c.field-meta.xml
<CustomField>
    <fullName>Special_Needs__c</fullName>
    <label>Special Needs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>