force-app/main/default/objects/Fulfillment__c/fields/Submitted_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Waiver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted Waiver</label>
    <type>Checkbox</type>
</CustomField>